Corrected nav bar spacing and sizing

--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -5,10 +5,10 @@
   justify-content: space-evenly;
   align-items: center;
   padding-bottom: -10px;
-  margin-bottom: -15px;
+  margin-bottom: -20px;
   background-color: #fff;
 }
 
 .logo {
-  margin-top: -15px;
+  margin-top: -17px;
 }
